Some further code cleanup.